Add imgaes & finalize

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="css/main.min.css" />
-		<title>10/C. Discord</title>
+		<title>10/C. Discord Bevezetés</title>
 		<script
 			src="https://kit.fontawesome.com/e553576236.js"
 			crossorigin="anonymous"
@@ -38,6 +38,8 @@
 				<i class="fas fa-chevron-right shadow" id="next"></i>
 			</div>
 		</div>
+
+		<div id="watermark">Jelszo Co. 2020.</div>
 
 		<script src="main.js"></script>
 		<script src="CustomEase.min.js"></script>
